--- a/app/views/maps/incidents/index.html.erb
+++ b/app/views/maps/incidents/index.html.erb
@@ -17,7 +17,7 @@
 				<%= partial_numbers_for(:incidents, @incidents_count, :breakdown) %>
 			</li>
 			<li class="action-link">
-				<a class="box theft active" href="/profiles/incidents#/">
+				<a class="box theft active" href="/maps/incidents#/">
 					<p class="title">Mostrar todos</p>
 				</a>
 			</li>
