--- a/app/views/maps/places/index.html.erb
+++ b/app/views/maps/places/index.html.erb
@@ -26,6 +26,8 @@
 <br>
 <div class="content-fluid">
 	<div class="listing-view">
+		<div class="first"></div>
 		<%= render :partial => 'profiles/workshops/workshop', :collection => @workshops %>
+		<%= render :partial => 'profiles/parkings/parking', :collection => @parkings %>
 	</div>
 </div>
