--- a/app/views/maps/places/index.html.erb
+++ b/app/views/maps/places/index.html.erb
@@ -2,30 +2,15 @@
 <div class="separator"></div>
 <div>	
 	<%= navbar_map_for %>
-	<div class="pull-left">
-		<ul class="stats inlined-list">
-			<li>
-				<%= partial_numbers_for(:places, @places_count, :workshop) %>
-			</li>
-			<li>
-				<%= partial_numbers_for(:places, @places_count, :parking) %>
-			</li>
-			<li>
-				<%= partial_numbers_for(:places, @places_count, :bikefriendly_place) %>
-			</li>
-			<li class="action-link">
-				<a class="box active" href="/maps/places#/">
-					<p class="title">Mostrar todos</p>
-				</a>
-			</li>
-		</ul>
+	<div id="stats-container">
+		<%= render :partial => 'maps/places/stats', :locals => {:hashed_count => @places_count} %>
 	</div>
 </div>
 
 <div id="map" class="show-only edit map-dimensions map-big shadow-light rounded-5"></div>
 <br>
 <div class="content-fluid">
-	<div class="listing-view">
+	<div id="listing-contents" class="listing-view" data-suburl="places">
 		<div class="first"></div>
 		<%= render :partial => 'profiles/workshops/workshop', :collection => @workshops %>
 		<%= render :partial => 'profiles/parkings/parking', :collection => @parkings %>
