City selection on user profile reflects on the map center for the user account on the web

--- a/app/views/layouts/maps.html.erb
+++ b/app/views/layouts/maps.html.erb
@@ -12,10 +12,11 @@
 </head>
 
 <body>
+  <%= user_default_city %>
 	<%= render 'shared/notice' %>
 	<%= render 'layouts/shared/navbar' %>
 	<div class="background-logo"></div>
-	
+
 	<div class="content-fluid">
 		<div class="row-fluid top-spaced-70">
 			<div class="span1"></div>
