--- a/app/views/maps/places/index.html.erb
+++ b/app/views/maps/places/index.html.erb
@@ -1,3 +1,5 @@
+<%= render 'maps/shared/city_not_set_alert' %>
+
 <h3 class="centered-text">Mapa de tu ciudad</h3>
 <div class="separator"></div>
 <div>	
