--- a/app/assets/stylesheets/bikes.css.scss
+++ b/app/assets/stylesheets/bikes.css.scss
@@ -60,6 +60,16 @@ body {
 
 // Styles for index view
 
+.bike {
+	.label {
+		font-weight: normal;
+		padding: 5px;
+		a {
+			color: white;
+		}
+	}
+}
+
 .index {
 
 	.bike:hover {
@@ -80,18 +90,16 @@ body {
 	  margin: 27px;
 	  float: left;
 		font-size: 12px;
-
-		h3 {
+		
+		.title {
 			font-size: 20px;
+			margin: 0px;
 			a{
 				text-decoration: none;
 			}
 		}
 		
 		.brand {
-			padding: 0px;
-			margin-top: 0px;
-
 			text-transform: uppercase;
 			font-size: 11px;
 			color: #404040;
