--- a/app/views/bikes/show.html.erb
+++ b/app/views/bikes/show.html.erb
@@ -1,9 +1,10 @@
 <div id="section-bikes" class="show">
 	<div id="<%= @bike.id %>" class="bike board rounded-top-5 shadow-light centered">
-		<div class="details">
+		
+		<div class="details">			
 			<div class="row-fluid">
 				<div class="pull-right">
-					<h3><%= @bike.name %></h3>
+					<h3><%= @bike.name %></h3>					
 				</div>
 				<div class="pull-left">
 					<ul class="nav nav-pills">
@@ -14,14 +15,14 @@
 			    </ul>
 				</div>
 			</div>
-			
-				<div class="row-fluid">
-					<div class="pull-right">
-						<span class="owner">
-							<%= t('bikes.views.show.owned_by') %><%= contact_for(@bike) %>
-						</span>
-					</div>
+			<div class="row-fluid">
+				<div class="pull-right">
+					<span class="owner">
+						<%= t('bikes.views.show.owned_by') %><%= contact_for(@bike) %>
+					</span>
 				</div>
+			</div>
+			<%= render :partial => 'bikes/visible_status', :locals => {:bike => @bike } %>
 			
 		</div>
 
