--- a/app/views/bikes/_bike.html.erb
+++ b/app/views/bikes/_bike.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= bike.id %>" class="bike board rounded-5 shadow-light">
+<div id="b-<%= bike.id %>" class="bike board item-bikly rounded-5 shadow-light">
 	
 	<p class="title"><%= link_to bike.name, bike_path(bike) %></p>
 	<p class="brand"><%= bike.brand %></p>	
