--- a/app/views/bikes/_likes_count.html.erb
+++ b/app/views/bikes/_likes_count.html.erb
@@ -1,5 +1,5 @@
 <div class="likes-count">
-	<div id="<%= bike.id %>" class="<%= bike.is_liked_by?(current_user) %> heart" original-title="<%= tooltip_for(bike) %>"></div>
+	<div id="<%= bike.id %>" class="<%= bike.is_liked_by?(current_user) %> heart" original-title="<%= tooltip_for(bike) %>" data-group="bikes"></div>
 	<% if  bike.likes_count == 1 %>
 		<p class="likes rounded-5"><span class="count">1</span><%= t('bikes.views.show.likes.one') %></p>
 	<% else %>
