--- a/app/views/bikes/show.html.erb
+++ b/app/views/bikes/show.html.erb
@@ -1,5 +1,5 @@
 <div id="section-bikes" class="show">
-	<div id="<%= @bike.id %>" class="bike board rounded-top-5 shadow-light centered">
+	<div id="b-<%= @bike.id %>" class="bike board rounded-top-5 shadow-light centered">
 		
 		<div class="details">			
 			<div class="row-fluid">
