--- a/app/views/bikes/likes/change_count.js.erb
+++ b/app/views/bikes/likes/change_count.js.erb
@@ -1,1 +1,1 @@
-$('#<%= @bike.id %> .status .likes-count').replaceWith("<%= escape_javascript( render :partial => 'bikes/likes_count', :locals => {:bike => @bike}) %>");
+$('#b-<%= @bike.id %> .status .likes-count').replaceWith("<%= escape_javascript( render :partial => 'bikes/likes_count', :locals => {:bike => @bike}) %>");
