--- a/app/views/bikes/new.html.erb
+++ b/app/views/bikes/new.html.erb
@@ -3,7 +3,7 @@
 	<div class="row-fluid">
 		<div class="span12">
 			<ul class="nav nav-pills pull-left">
-				<li class="active"><%= link_to t('actions.back_arrow').html_safe, bikes_path %></li>
+				<li class="active"><%= link_to t('actions.back_arrow').html_safe, :back %></li>
 	    </ul>
 			<h3 class="pull-right"><%= t('bikes.views.new.title') %></h3>
 		</div>
