--- a/app/views/layouts/profiles.html.erb
+++ b/app/views/layouts/profiles.html.erb
@@ -27,13 +27,10 @@
 		    	<li class="<%= on_path?(user_profile_path(@user.username)) %>">
 						<%= link_to (user_signed_in? ? 'Tu actividad' : 'Actividad'), user_profile_path(@user.username) %>
 					</li>
-		    	<li class="<%= on_path?(user_bikes_path(@user.username)) %>">
-						<%= link_to (user_signed_in? ? 'Tus bicis' : 'Bicis'), user_bikes_path(@user.username) %>
+		    	<li class="<%= on_path?(user_gear_path(@user.username)) %>">
+						<%= link_to (user_signed_in? ? 'Tu equipo' : 'Equipo'), user_gear_path(@user.username) %>
 					</li>
 					<% if user_signed_in? %>
-						<li><a href="#">Cerca de ti</a></li>
-			    	<li><a href="#">Mensajes</a></li>
-			    	<li><a href="#">Boletín Semanal</a></li>
 		    		<li class="nav-header">Configuración</li>
 						<li class="<%= on_path?(settings_profile_path) %>"><%= link_to 'Perfil', settings_profile_path %></li>
 						<li class="<%= on_path?(settings_access_path) %>"><%= link_to 'Acceso', settings_access_path %></li>
