--- a/app/views/maps/incidents/index.html.erb
+++ b/app/views/maps/incidents/index.html.erb
@@ -1,7 +1,6 @@
 <%= render 'maps/shared/city_not_set_alert' %>
+<%= render 'maps/shared/header' %>
 
-<h3 class="centered-text">Mapa de tu ciudad</h3>
-<div class="separator"></div>
 <div>	
 	<%= navbar_map_for %>
 	<div id="stats-container">
