--- a/app/views/settings/profile.html.erb
+++ b/app/views/settings/profile.html.erb
@@ -39,6 +39,31 @@
 		</div>
 		<div class="span2"></div>
 	</div>
+	<br/>
+	<p>Establece o actualiza tu foto de perfil</p>
+	<div class="separator"></div>
+	<br/>
+	<div class="row-fluid">
+		<div class="span6">
+			<%= form_tag settings_change_picture_path, :multipart => true , :method => :put, :class => "form-horizontal" do %>
+				<div class="control-group">
+					<%= label_tag 'Selecciona una imagen:' %>
+					<div class="controls">
+						<%= file_field_tag :file %>
+					</div>
+				</div>
+				<div class="control-group">
+					<div class="controls">
+						<%= submit_tag 'Aceptar', :class => "btn btn-info pull-right" %>
+					</div>
+				</div>
+			<% end %>
+		</div>
+		<div class="span6">
+			<p>Si lo deseas, puedes eliminar la imagen actual: </p>
+			<%= link_to 'Eliminar', settings_destroy_picture_path, :method => :delete, :class => "btn btn-danger pull-right" %>
+		</div>
+	</div>
 </div>
 
 <div class="well top-spaced">
