Profiles home section implemented with recent users activity

--- a/app/assets/stylesheets/incidents.css.scss
+++ b/app/assets/stylesheets/incidents.css.scss
@@ -181,9 +181,9 @@
 }
 
 $accidents: #CE2B28;
-$thefts: #3652AE;
+$thefts: #7C1CAE;
 $assaults: #63A62C;
-$breakdowns: #F18706;
+$breakdowns: #F14100;
 
 .listing-view {
 	
